# 3DTurtles

./: LICENSE  README.md  pyproject.toml  turtle3D.py  turtles3D.py
docs/: conf.py  index.rst
turtles3D.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
